# tauri-plugin-serialport

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
examples/svelte-app/: pnpm-lock.yaml
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml
examples/svelte-app/src-tauri/src/: main.rs
src/: command.rs
webview-dist/: index.d.ts  index.js  index.umd.cjs
webview-src/: index.ts
