[package]
name = "tauri-plugin-serialport-v1"
version = "0.1.0"
authors = ["lzhida", "kuyoonjo"]
description = "A tauri plugin developed based on Serialport."
edition = "2021"
rust-version = "1.76"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1" }
serde = "1.0"
thiserror = "1.0"
serialport5 = { version = "5.0" }
